Added seqString API route
